commited from git bash